# merged-orderbook-NRT-aggregator

./: CMakeLists.txt  README.md
include/: aggregator_metrics.hpp  clean_data.hpp  common.hpp  merged_order_book.hpp  nrt_latch.hpp  optimistic_ring_buffer.hpp
src/: clean_data.cpp  main.cpp  orderbook.proto
